2009-10-22  Joseph Pecoraro  <joepeck@webkit.org>

        Reviewed by Pavel Feldman.

        Web Inspector: Error - requestContentType [undefined] is not an object
        https://bugs.webkit.org/show_bug.cgi?id=30666

        * inspector/front-end/ResourceView.js:
        (WebInspector.ResourceView.prototype._refreshFormData):

2009-10-22  Maxime Simon  <simon.maxime@gmail.com>

        Reviewed by Holger Freyther.

        [Haiku] Correction of the accented letter width (they were 2 characters long).
        https://bugs.webkit.org/show_bug.cgi?id=30629

        * platform/graphics/haiku/SimpleFontDataHaiku.cpp:
        (WebCore::SimpleFontData::platformWidthForGlyph):

2009-10-21  Jon Honeycutt  <jhoneycutt@apple.com>

        <rdar://problem/7270320> Screenshots of off-screen plug-ins are blank
        <rdar://problem/7270314> After halting a transparent PluginView on
        Windows, the transparency is applied twice

        Replace use of Frame::nodeImage() with a function that takes a snapshot
        of a PluginView.

        Reviewed by Dan Bernstein.

        * plugins/PluginView.h:
        Made paintWindowedPluginIntoContext() non-const, as it now calls
        paintIntoTransformedContext(). Declare paintIntoTransformedContext()
        and snapshot() for Windows platforms.

        * plugins/win/PluginViewWin.cpp:
        (WebCore::PluginView::paintIntoTransformedContext):
        Paints into the passed HDC without applying any coordinate translations.
        Code moved from paintWindowedPluginIntoContext() and paint(). Removed
        the memset() of windowpos in lieu of assignment.
        (WebCore::PluginView::paintWindowedPluginIntoContext):
        Code moved to paintIntoTransformedContext().
        (WebCore::PluginView::paint):
        Ditto.
        (WebCore::PluginView::snapshot):
        Create a context, and if the plug-in is windowless, translate it so the
        plug-in will draw at the correct location. Create a bitmap, and select